# RegistrationPipeline

./: CMakeLists.txt  IDescription.h  IDetection.h  IRefinement.h  ISearchingStrategy.cpp  ISearchingStrategy.h  README.md  data.cpp  data.h  inputhandler.cpp  inputhandler.h  main.cpp  outputhandler.cpp  outputhandler.h  pipeline.cpp  pipeline.h
Doc/: Readme.docx  diagrams.xmi  diagrams.xmi.zargo  diagrams.xmi~  graphic.odg  instruccions.txt  mail shot  readme.odt  results3PS-4PCS.ods  slides.odp
Doc/Adjunts mail shot/: dragon_res4Extrem.ply  mypcl.cpp
include/: 4pcsRegistrationObject.cpp  4pcsRegistrationObject.h  Adapter4PCS.cpp  Adapter4PCS.h  AdapterCGAL.cpp  AdapterCGAL.h  AdapterPCL.cpp  AdapterPCL.h  IDataStructure.h  IDescriptor.h  IManagerIO.h  base.cpp  base.h  descHistogram.cpp  descHistogram.h  descdist.cpp  descdist.h  elementset.cpp  elementset.h  myicp.cpp  myicp.cpp.GKDtree  myicp.h  myicp.h.GKDTree  mykdtree.h  mypcl.cpp  mypcl.h  plyio.cpp  plyio.h  point.cpp  point.h  timer.cpp  timer.h
include/Converters/: converter4PCS.cpp  converter4PCS.h  converterCGAL.cpp  converterCGAL.h  converterEigen.cpp  converterEigen.h  converterFlann.cpp  converterFlann.h  converterGridTree.cpp  converterGridTree.h  converterKdtree.cpp  converterKdtree.h  converterKdtreeCV.cpp  converterKdtreeCV.h  converterPCL.cpp  converterPCL.h  converterSuper4PCS.cpp  converterSuper4PCS.h  converterYago.cpp  converterYago.h
include/DataStructures/: DSparam.cpp  DSparam.h  IDataStructure.h  myFlann.cpp  myFlann.h
include/DataStructures/4PCSkdtree/: my4PCSkdtree.cpp  my4PCSkdtree.h
include/DataStructures/S4PCSkdtree/: myS4PCSkdtree.cpp  myS4PCSkdtree.h
include/DataStructures/compressedOctree/: myCompressedOctree.cpp  myCompressedOctree.h
include/DataStructures/flann/: myFlann.cpp  myFlann.h
include/DataStructures/gridTree/: myGridTree.cpp  myGridTree.h
include/DataStructures/kdtree/: mykdtree.cpp  mykdtree.h
include/DataStructures/kdtreeCV/: myKdtreeCV.cpp  myKdtreeCV.h
include/DataStructures/libnabo/: myLibNabo.cpp  myLibNabo.h
include/DataStructures/noDataStructure/: noDataStructure.cpp  noDataStructure.h
include/DataStructures/octree/: Node.cpp  Node.h  Octree.cpp  Octree.h  myOctree.cpp  myOctree.h
include/DataStructures/skipOctree/: mySkipOctree.cpp  mySkipOctree.h
include/DataStructures/trihash/: AdapterDataStruct.cpp  AdapterDataStruct.h  myTriHash.cpp  myTriHash.h
include/octree/: Node.cpp  Node.h  Octree.cpp  Octree.h
methods/: des_fpfh.cpp  des_fpfh.h  des_shot.cpp  des_shot.h  des_sp.cpp  des_sp.h  det_ColorSpaceSampling.cpp  det_ColorSpaceSampling.h  det_DistConnectedComponents.cpp  det_DistConnectedComponents.h  det_FPFHSignature33.cpp  det_FPFHSignature33.h  det_HierarchicalNormalSpaceSampling.cpp  det_HierarchicalNormalSpaceSampling.h  det_KinectSuperSampling.cpp  det_KinectSuperSampling.h  det_NormalSpaceSampling.cpp  det_NormalSpaceSampling.h  det_RandomSampling.cpp  det_RandomSampling.h  det_iss.cpp  det_iss.h  ref_icp.cpp  ref_icp.cpp.GKDtree  ref_icp.h.GKDtree  ss_3PS.cpp  ss_3PS.h  ss_4PCS.cpp  ss_4PCS.h  ss_Grid3D.cpp  ss_Grid3D.h  ss_HNSS.cpp  ss_HNSS.h  ss_ImprovedGrid.cpp  ss_ImprovedGrid.h  ss_SmartForce.cpp  ss_SmartForce.h  ss_Super4PCS.cpp  ss_Super4PCS.h  ss_pclFeatureBased.cpp  (+1 more)
params/: params.xml  paramsBenchmark.xml~  paramsBenchmark1.xml~  paramsBenchmark2.xml~  paramsBenchmark3.xml~  paramsBenchmark4.xml~  shellNormals.sh~  shellSelfie.sh~
